--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -57,6 +56,7 @@
         android:layout_marginEnd="24dp">
 
         <EditText
+            android:id="@+id/ed1"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginEnd="5dp"
@@ -70,6 +70,7 @@
             android:inputType="number"/>
 
         <EditText
+            android:id="@+id/ed2"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -83,6 +84,7 @@
             android:textColor="@color/colorBlack"
             android:inputType="number"/>
         <EditText
+            android:id="@+id/ed3"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -96,20 +98,7 @@
             android:textColor="@color/colorBlack"
             android:inputType="number"/>
         <EditText
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
-            android:textSize="35sp"
-            android:background="@drawable/grey_mobile_number"
-            android:gravity="center"
-            android:cursorVisible="false"
-            android:maxLength="1"
-            android:textColor="@color/colorBlack"
-            android:inputType="number"/>
-
-        <EditText
+            android:id="@+id/ed4"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -124,6 +113,22 @@
             android:inputType="number"/>
 
         <EditText
+            android:id="@+id/ed5"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:textSize="35sp"
+            android:background="@drawable/grey_mobile_number"
+            android:gravity="center"
+            android:cursorVisible="false"
+            android:maxLength="1"
+            android:textColor="@color/colorBlack"
+            android:inputType="number"/>
+
+        <EditText
+            android:id="@+id/ed6"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -145,7 +150,9 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/button_bg"
         android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
+        android:layout_marginEnd="24dp"
+        android:alpha="0.5"
+        android:clickable="false">
 
         <TextView
             android:layout_width="wrap_content"
@@ -155,7 +162,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:textColor="@color/colorWhite"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
