--- a/app/src/main/res/layout/activity_owner_details.xml
+++ b/app/src/main/res/layout/activity_owner_details.xml
@@ -48,8 +48,9 @@
             android:layout_height="100dp" />
 
         <ImageView
-            android:layout_width="12dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/a1"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_baseline_add_24" />
 
@@ -79,7 +80,7 @@
 
         <EditText
             android:id="@+id/owner_name"
-            android:inputType="phone"
+            android:inputType="textPersonName"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@null"
@@ -115,7 +116,7 @@
 
         <EditText
             android:id="@+id/e_mail"
-            android:inputType="phone"
+            android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@null"
@@ -195,24 +196,14 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/add_owner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Owner"
-        android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
-        android:layout_marginEnd="24sp"
-        android:layout_marginTop="10sp"
-        android:layout_below="@+id/mobile_number_layout"
-        android:layout_alignParentEnd="true"/>
+
 
 
     <RelativeLayout
         android:id="@+id/continue_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/add_owner"
+        android:layout_below="@+id/mobile_number_layout"
         android:layout_marginTop="40dp"
         android:background="@drawable/button_bg"
         android:layout_marginStart="24dp"
