--- a/app/src/main/res/layout/activity_salon_details.xml
+++ b/app/src/main/res/layout/activity_salon_details.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.SalonDetailsActivity"
-    android:background="@color/colorMediumGrey">
+    android:background="@color/colorMediumGrey"
+    tools:context=".Activities.SalonDetailsActivity">
 
     <RelativeLayout
         android:id="@+id/rl1"
@@ -17,10 +16,10 @@
             android:id="@+id/back_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/back_black"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="12dp" />
+            android:src="@drawable/back_black" />
 
 
         <TextView
@@ -28,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Enter Your Salon Details"
-            android:textSize="18sp"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack"
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
@@ -37,35 +36,34 @@
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/rl1"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
         android:text="Name Of Salon"
         android:textColor="@color/colorBlack"
-        android:textSize="18sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/rl1"/>
+        android:textSize="18sp" />
 
     <RelativeLayout
         android:id="@+id/l1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/grey_mobile_number"
         android:layout_below="@id/tv1"
         android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/grey_mobile_number"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/salon_name"
-            android:inputType="phone"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@null"
-            android:paddingStart="10dp"
-            android:textColor="@color/colorBlack"
             android:layout_centerInParent="true"
             android:layout_margin="3dp"
-            />
+            android:background="@null"
+            android:inputType="text"
+            android:paddingStart="10dp"
+            android:textColor="@color/colorBlack" />
 
     </RelativeLayout>
 
@@ -73,35 +71,34 @@
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/l1"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
         android:text="Salon Address"
         android:textColor="@color/colorBlack"
-        android:textSize="18sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/l1"/>
+        android:textSize="18sp" />
 
     <RelativeLayout
         android:id="@+id/l2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/grey_mobile_number"
         android:layout_below="@id/tv2"
         android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/grey_mobile_number"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/salon_address"
-            android:inputType="phone"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:background="@null"
-            android:paddingStart="10dp"
-            android:textColor="@color/colorBlack"
+            android:layout_height="40dp"
             android:layout_centerInParent="true"
             android:layout_margin="3dp"
-            />
+            android:background="@null"
+            android:inputType="text"
+            android:paddingStart="10dp"
+            android:textColor="@color/colorBlack" />
 
     </RelativeLayout>
 
@@ -109,87 +106,141 @@
         android:id="@+id/tv3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/l2"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
         android:text="Salon Pictures"
         android:textColor="@color/colorBlack"
-        android:textSize="18sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/l2"/>
+        android:textSize="18sp" />
 
     <LinearLayout
         android:id="@+id/l5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/tv3"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        android:weightSum="4">
 
         <RelativeLayout
-            android:id="@+id/l3"
-            android:layout_width="wrap_content"
+            android:id="@+id/iml_1"
+            android:layout_width="0dp"
+            android:layout_marginEnd="5dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_weight="1"
             android:background="@drawable/grey_mobile_number"
-            android:layout_below="@id/tv2"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp">
+            android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/im1"
                 android:layout_width="80dp"
-                android:layout_height="80dp"/>
+                android:layout_height="80dp" />
 
             <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:id="@+id/a1"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ic_baseline_add_24"/>
+                android:src="@drawable/ic_baseline_add_24" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/l4"
-            android:layout_width="wrap_content"
+            android:id="@+id/iml_2"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             android:background="@drawable/grey_mobile_number"
-            android:layout_below="@id/tv2"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp">
+            android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/im2"
                 android:layout_width="80dp"
-                android:layout_height="80dp"/>
+                android:layout_height="80dp" />
 
             <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:id="@+id/a2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ic_baseline_add_24"/>
+                android:src="@drawable/ic_baseline_add_24" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/iml_3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/grey_mobile_number"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/im3"
+                android:layout_width="80dp"
+                android:layout_height="80dp" />
+
+            <ImageView
+                android:id="@+id/a3"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_baseline_add_24" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/iml_4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/grey_mobile_number"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/im4"
+                android:layout_width="80dp"
+                android:layout_height="80dp" />
+
+            <ImageView
+                android:id="@+id/a4"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_baseline_add_24" />
 
         </RelativeLayout>
 
     </LinearLayout>
+
 
     <RelativeLayout
         android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/l5"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/button_bg"
         android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/button_bg">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NEXT"
             android:layout_centerInParent="true"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
+            android:text="NEXT"
             android:textColor="@color/colorWhite"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
