--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#FF8C00</color>
     <color name="colorPrimaryDark">#FF8C00</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#FF8C00</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorLightGrey">#DCDCDC</color>
