--- a/app/src/main/res/layout/activity_barber_details.xml
+++ b/app/src/main/res/layout/activity_barber_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,314 +32,34 @@
 
     </RelativeLayout>
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_barbers"
+        android:layout_below="@id/rl1"
+        android:layout_above="@id/continue_button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/rl1">
+        android:layout_height="match_parent" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <RelativeLayout
+        android:id="@+id/continue_button"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/button_bg">
 
-            <RelativeLayout
-                android:id="@+id/im_layout"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/circle">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:text="NEXT"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold" />
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp" />
+    </RelativeLayout>
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/ic_baseline_add_24" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tv1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/im_layout"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
-                android:text="Name Of Barber"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp" />
-
-            <RelativeLayout
-                android:id="@+id/l1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv1"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:background="@drawable/grey_mobile_number"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/barber_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_centerInParent="true"
-                    android:layout_margin="3dp"
-                    android:background="@null"
-                    android:inputType="phone"
-                    android:paddingStart="10dp"
-                    android:textColor="@color/colorBlack" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tv2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/l1"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
-                android:text="Email Address"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp" />
-
-            <RelativeLayout
-                android:id="@+id/l2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv2"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:background="@drawable/grey_mobile_number"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/e_mail"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_centerInParent="true"
-                    android:layout_margin="3dp"
-                    android:background="@null"
-                    android:inputType="phone"
-                    android:paddingStart="10dp"
-                    android:textColor="@color/colorBlack" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tv3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/l2"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
-                android:text="Mobile Number"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp" />
-
-            <RelativeLayout
-                android:id="@+id/mobile_number_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv3"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp">
-
-                <RelativeLayout
-                    android:id="@+id/l5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="5dp"
-                    android:background="@drawable/grey_mobile_number"
-                    android:orientation="horizontal">
-
-                    <com.hbb20.CountryCodePicker
-                        android:id="@+id/cpp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginTop="3dp"
-                        android:layout_marginEnd="6dp"
-                        android:layout_marginBottom="3dp"
-                        app:ccp_arrowColor="@color/colorBlack"
-                        app:ccp_contentColor="@color/colorBlack"
-                        app:ccp_showFlag="false"
-                        app:ccp_showNameCode="false" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/l6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_toEndOf="@+id/l5"
-                    android:background="@drawable/grey_mobile_number"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/phone_number"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="3dp"
-                        android:background="@null"
-                        android:inputType="phone"
-                        android:paddingStart="10dp"
-                        android:textColor="@color/colorBlack" />
-
-                </RelativeLayout>
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tv4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/mobile_number_layout"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
-                android:text="Experience:"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp" />
-
-            <LinearLayout
-                android:id="@+id/tv_l"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv4"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginBottom="10dp"
-                android:weightSum="2">
-
-                <TextView
-                    android:id="@+id/tv5"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1"
-                    android:text="Years"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/tv6"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:text="Months"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="18sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/exp_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_l"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:weightSum="2">
-
-                <RelativeLayout
-                    android:id="@+id/l7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/grey_mobile_number">
-
-                    <EditText
-                        android:id="@+id/exp_yrs"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="3dp"
-                        android:background="@null"
-                        android:inputType="phone"
-                        android:paddingStart="10dp"
-                        android:textColor="@color/colorBlack" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/l8"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/grey_mobile_number">
-
-                    <EditText
-                        android:id="@+id/exp_mon"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="3dp"
-                        android:background="@null"
-                        android:inputType="phone"
-                        android:paddingStart="10dp"
-                        android:textColor="@color/colorBlack" />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/add_owner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/exp_layout"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="10sp"
-                android:layout_marginEnd="24sp"
-                android:text="Add Barber"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/add_service"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/exp_layout"
-                android:layout_marginStart="24sp"
-                android:layout_marginTop="10sp"
-                android:text="Add Service"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
-
-            <RelativeLayout
-                android:id="@+id/continue_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/add_owner"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="24dp"
-                android:background="@drawable/button_bg">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:text="NEXT"
-                    android:textColor="@color/colorWhite"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
-        </RelativeLayout>
-    </ScrollView>
 </RelativeLayout>
