--- a/app/src/main/res/layout/activity_owner_details.xml
+++ b/app/src/main/res/layout/activity_owner_details.xml
@@ -128,82 +128,12 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mobile Number"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/l2"/>
-
-    <RelativeLayout
-        android:id="@+id/mobile_number_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv3"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
-
-        <RelativeLayout
-            android:id="@+id/l5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/grey_mobile_number"
-            android:layout_marginEnd="5dp">
-
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/cpp"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                app:ccp_showNameCode="false"
-                app:ccp_showFlag="false"
-                app:ccp_arrowColor="@color/colorBlack"
-                android:layout_marginBottom="3dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginEnd="6dp"
-                app:ccp_contentColor="@color/colorBlack"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/l6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/grey_mobile_number"
-            android:layout_toEndOf="@+id/l5"
-            android:layout_marginStart="5dp">
-
-            <EditText
-                android:id="@+id/phone_number"
-                android:inputType="phone"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@null"
-                android:paddingStart="10dp"
-                android:textColor="@color/colorBlack"
-                android:layout_centerInParent="true"
-                android:layout_margin="3dp"
-                />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-
-
-
 
     <RelativeLayout
         android:id="@+id/continue_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/mobile_number_layout"
+        android:layout_below="@+id/l2"
         android:layout_marginTop="40dp"
         android:background="@drawable/button_bg"
         android:layout_marginStart="24dp"
