--- a/app/src/main/res/layout/activity_salon_details.xml
+++ b/app/src/main/res/layout/activity_salon_details.xml
@@ -79,6 +79,8 @@
         android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
+
+
     <RelativeLayout
         android:id="@+id/l2"
         android:layout_width="match_parent"
@@ -103,10 +105,54 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv3"
+        android:id="@+id/tv5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/l2"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
+        android:text="Salon Type"
+        android:textColor="@color/colorBlack"
+        android:textSize="18sp" />
+
+    <LinearLayout
+        android:id="@+id/l4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_below="@id/tv5"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp">
+
+        <RadioButton
+            android:id="@+id/male"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Male"
+            android:layout_weight="1"/>
+
+        <RadioButton
+            android:id="@+id/female"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Female"
+            android:layout_weight="1" />
+
+        <RadioButton
+            android:id="@+id/unisex"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Unisex"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/l4"
         android:layout_marginStart="24dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
