--- a/app/src/main/res/layout/activity_show_income.xml
+++ b/app/src/main/res/layout/activity_show_income.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -110,6 +110,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/today_earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="₹100"
@@ -136,6 +137,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/weekly_earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="₹100"
@@ -162,6 +164,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/monthly_earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="₹100"
@@ -186,6 +189,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/yearly_earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="₹100"
