--- a/app/src/main/res/layout/barber_item.xml
+++ b/app/src/main/res/layout/barber_item.xml
@@ -77,6 +77,7 @@
                 android:textColor="@color/colorBlack"/>
 
             <TextView
+                android:id="@+id/month_earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="₹100"
@@ -103,6 +104,7 @@
                 android:textColor="@color/colorBlack"/>
 
             <TextView
+                android:id="@+id/today_earning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="₹100"
