--- a/app/src/main/res/layout/activity_future_booking.xml
+++ b/app/src/main/res/layout/activity_future_booking.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -101,13 +102,13 @@
                 android:background="@drawable/grey_mobile_number">
 
                 <EditText
-                    android:id="@+id/exp_yrs"
+                    android:id="@+id/time_from"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_margin="3dp"
                     android:background="@null"
-                    android:inputType="phone"
+                    android:inputType="time"
                     android:paddingStart="10dp"
                     android:textColor="@color/colorBlack" />
 
@@ -122,13 +123,13 @@
                 android:background="@drawable/grey_mobile_number">
 
                 <EditText
-                    android:id="@+id/exp_mon"
+                    android:id="@+id/time_to"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_margin="3dp"
                     android:background="@null"
-                    android:inputType="phone"
+                    android:inputType="time"
                     android:paddingStart="10dp"
                     android:textColor="@color/colorBlack" />
 
