--- a/app/src/main/res/layout/activity_show_income.xml
+++ b/app/src/main/res/layout/activity_show_income.xml
@@ -24,6 +24,7 @@
 
 
         <TextView
+            android:id="@+id/barber_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -212,7 +213,7 @@
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Today's Slots"
+            android:text="Upcoming Bookings"
             android:textColor="@color/colorBlack"
             android:textSize="18sp"
             android:layout_marginTop="25dp"
