--- a/app/src/main/res/layout/barber_item.xml
+++ b/app/src/main/res/layout/barber_item.xml
@@ -24,7 +24,11 @@
 
         <TextView
             android:id="@+id/barber_name"
-            android:layout_width="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/month_l"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Akim"
             android:textColor="@color/colorBlack"/>
@@ -60,12 +64,10 @@
 
         </LinearLayout>
 
-
-
-
         <LinearLayout
+            android:id="@+id/month_l"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_toStartOf="@+id/ll2"
             android:orientation="vertical"
             android:gravity="center">
@@ -88,9 +90,9 @@
 
         <LinearLayout
             android:id="@+id/ll2"
+            android:layout_toStartOf="@id/delete_barber"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_marginEnd="10dp"
@@ -111,6 +113,15 @@
                 android:textColor="@color/colorBlack"/>
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/delete_barber"
+            android:visibility="invisible"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
